tests/routing/gateway-api-shared/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api-shared-a
  labels:
    istio.io/rev: asm-stable
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api-shared-b
  labels:
    istio.io/rev: asm-stable
