tests/routing/gateway-api-shared/routing-a.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Routing
metadata:
  name: contributor-a
  namespace: gateway-api-shared-a
spec:
  hostname: shared-multi.kartverket.no
  routingProvider: Standard
  ownership: Shared
  routes:
    - pathPrefix: /team-a
      targetApp: app-a
      port: 8080
